k8s/sensor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensor-deployment
  labels:
    app: sensor
spec:
  replicas: 5
  selector:
    matchLabels:
      app: sensor
  template:
    metadata:
      labels:
        app: sensor
    spec:
      containers:
      - name: sensor
        image: sensor-client:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "200m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
